STAC-24562: support deletion via otel mappings
# Conflicts:
#	connector/topologyconnector/internal/mapping_handler_test.go
#	go.work.sum

# Conflicts:
#	go.work.sum
